# SyNG-BTS

./: .gitignore  .readthedocs.yaml  Experiment_run_evaluations.ipynb  Experiments_run.ipynb  Experiments_run_SyNG-BTS.ipynb  Experiments_run_SyntheSize.ipynb  Experiments_run_SyntheSize_robust.ipynb  MANIFEST.in  Makefile  README.md  Synthesize_Example.ipynb  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  datasets.rst  evals.rst  index.rst  methods.rst  migration.rst  synthesize.rst  usage.rst
evaluations/: case_dimensions_summary.csv  extract_metrics_Augmentation_COAD_2026_02_23.R  extract_metrics_Augmentation_COAD_LAML_2026_03_30.R  extract_metrics_Augmentation_FiveSubtypes_2026_02_24.R  get_evaluation.r  group_variable_info.txt  visualize_Augmentation_COAD_2026_02_23.R  visualize_Augmentation_COAD_LAML_2026_03_30.R  visualize_Augmentation_FiveSubtypes_2026_02_24.R  visualize_UMAP_FiveSubtypes_2026_03_12.py
old_syng_bts/: Complete_workflow2.py  Experiments_run.ipynb  cvae_data_augmentation.py  helper_models_new.py  helper_train_new.py  helper_training_new.py  test_new_datasets_records.txt
syng_bts/: __init__.py  core.py  data_utils.py  evaluations.py  experiments.py  helper_models.py  helper_train.py  helper_training.py  helper_utils.py  inference.py  model_factory.py  py.typed  result.py  synthesize.py  tools.py
syng_bts/data/: __init__.py
syng_bts/data/case/COAD_5-2/: COADPositive_5-2.csv
syng_bts/data/case/LAML_5-2/: LAMLPositive_5-2.csv  LAMLPositive_5-2_DESeq.csv  LAMLPositive_5-2_TC.csv
syng_bts/data/case/PAAD_5-2/: PAADPositive_5-2.csv  PAADPositive_5-2_DESeq.csv  PAADPositive_5-2_TC.csv
syng_bts/data/case/READ_5-2/: READPositive_5-2.csv  READPositive_5-2_DESeq.csv  READPositive_5-2_TC.csv
syng_bts/data/case/SKCM_5-2/: SKCMPositive_5-2.csv
syng_bts/data/case/brca_subtype/: BRCASubtypeSel.parquet  BRCASubtypeSel_groups.parquet  BRCASubtypeSel_test.parquet  BRCASubtypeSel_test_groups.parquet  BRCASubtypeSel_train.parquet  BRCASubtypeSel_train_epoch285_CVAE1-20_generated.parquet  BRCASubtypeSel_train_epoch285_CVAE1-20_generated_groups.parquet  BRCASubtypeSel_train_groups.parquet
syng_bts/data/case/lihc_subtype/: LIHCSubtypeFamInd.parquet  LIHCSubtypeFamInd_DESeq.parquet  LIHCSubtypeFamInd_DESeq_groups.parquet  LIHCSubtypeFamInd_test74.parquet  LIHCSubtypeFamInd_test74_DESeq.parquet  LIHCSubtypeFamInd_test74_DESeq_groups.parquet  LIHCSubtypeFamInd_train294.parquet  LIHCSubtypeFamInd_train294_DESeq.parquet  LIHCSubtypeFamInd_train294_DESeq_epochES_batch01_CVAE1-10_loss.csv  LIHCSubtypeFamInd_train294_groups.parquet
syng_bts/data/examples/: SKCMPositive_4.parquet
syng_bts/data/transfer/: BRCA.parquet  PRAD.parquet
syng_bts/python/: Experiments_new.py
tests/: README.md  __init__.py  conftest.py  test_all_models.py  test_core.py  test_data_utils.py  test_evaluations.py  test_experiments.py  test_helpers.py  test_imports.py  test_models.py  test_resolve_data.py  test_result.py  test_synthesize.py  test_training.py  test_verbose.py
vignettes/: Complete_workflow_COAD-LAML.py  Complete_workflow_COAD-LAML_records.txt  Complete_workflow_COAD.py  Complete_workflow_COAD_records.txt  Complete_workflow_FiveSubtypes.py  Complete_workflow_FiveSubtypes_records.txt  Complete_workflow_PAAD-READ-SKCM.py  Complete_workflow_PAAD-READ-SKCM_records.txt  summarize_case_dimensions.R
